docs: fixed variant to size in  tokens stories

--- a/libs/stack-ui/src/components/Date/date.stories.mdx
+++ b/libs/stack-ui/src/components/Date/date.stories.mdx
@@ -28,7 +28,7 @@ The language is handled by the `I18nProvider` of `react-aria`.
         year: 'numeric',
       },
       tokens: {
-        variant: 'p',
+        size: 'paragraph',
       },
     }}
   >
@@ -47,7 +47,7 @@ The language is handled by the `I18nProvider` of `react-aria`.
         year: 'numeric',
       },
       tokens: {
-        variant: 'p',
+        size: 'paragraph',
       },
     }}
   >
