--- a/libs/stack-ui/src/components/ShareButton/share-button.stories.mdx
+++ b/libs/stack-ui/src/components/ShareButton/share-button.stories.mdx
@@ -14,6 +14,7 @@ import ShareButton from './index'
         ariaLabel: 'Share on Facebook',
         icon: 'Facebook',
         key: 'facebook',
+        onClick: (key) => console.log(key),
       },
       {
         ariaLabel: 'Share on Twitter',
@@ -52,9 +53,7 @@ export const Template = (args) => <ShareButton {...args} />
   <Story
     name="Row Share Button"
     args={{
-      tokens: {
-        listDirection: 'row',
-      },
+      placement: 'right',
     }}
   >
     {Template.bind({})}
@@ -67,9 +66,7 @@ export const Template = (args) => <ShareButton {...args} />
   <Story
     name="Column Share Button"
     args={{
-      tokens: {
-        listDirection: 'column',
-      },
+      placement: 'bottom',
     }}
   >
     {Template.bind({})}
