fix: onChange, manual select value modifs, button tokens

--- a/libs/stack-ui/src/components/fields/Select/Select.stories.mdx
+++ b/libs/stack-ui/src/components/fields/Select/Select.stories.mdx
@@ -13,6 +13,7 @@ import SelectContent from '../../../storybook/SelectField'
     name: 'season',
     label: 'Season',
     placeholderLabel: 'Select a season',
+    onSelectionChange: () => console.log('test'),
   }}
 />
 
