feat: text area label, text area isError variant on all styling levels

--- a/libs/stack-ui/src/components/fields/TextArea/textArea.stories.mdx
+++ b/libs/stack-ui/src/components/fields/TextArea/textArea.stories.mdx
@@ -12,7 +12,7 @@ import TextArea from './index'
   args={{
     id: '',
     name: 'name',
-    errorMessage: '',
+    label: 'First name',
     placeholder: 'Message',
     required: true,
     disabled: false,
