feat: select accepts icon prop

--- a/libs/stack-ui/src/components/fields/Select/Select.stories.mdx
+++ b/libs/stack-ui/src/components/fields/Select/Select.stories.mdx
@@ -4,6 +4,7 @@ import { Canvas, Meta, Story } from '@storybook/addon-docs'
 import Select, { SelectStyled } from './Select'
 import SelectItem from '../SelectItem/SelectItem'
 import SelectContent from '../../../storybook/SelectField'
+import ChevronLeft from '../../icons/ChevronLeft'
 
 <Meta
   title="Form/Fields/Select"
@@ -32,6 +33,7 @@ Select Field component.
     name="Disabled"
     args={{
       disabled: true,
+      icon: 'ChevronLeft'
     }}
   >
     {Template.bind({})}
