fix: regular component focus ring

--- a/libs/stack-ui/src/components/ShareButton/share-button.stories.mdx
+++ b/libs/stack-ui/src/components/ShareButton/share-button.stories.mdx
@@ -14,21 +14,25 @@ import ShareButton from './index'
         ariaLabel: 'Share on Facebook',
         icon: 'Facebook',
         key: 'facebook',
+        href: '#',
       },
       {
         ariaLabel: 'Share on Twitter',
         icon: 'Twitter',
         key: 'twitter',
+        href: '#',
       },
       {
         ariaLabel: 'Share on Instagram',
         icon: 'Instagram',
         key: 'instagram',
+        href: '#',
       },
       {
         ariaLabel: 'Share on YouTube',
         icon: 'YouTube',
         key: 'youtube',
+        href: '#',
       },
     ],
   }}
