fix: popover uses use theme context for styling

--- a/libs/stack-ui/src/components/Popover/popover.stories.mdx
+++ b/libs/stack-ui/src/components/Popover/popover.stories.mdx
@@ -27,6 +27,7 @@ export const Template = (args) => (
     name="Default"
     args={{
       variant: 'p',
+      offset: 20,
     }}
   >
     {Template.bind({})}
