fix: controls for sharebutton, focus ring shows up correctly

--- a/libs/stack-ui/src/components/Popover/popover.stories.mdx
+++ b/libs/stack-ui/src/components/Popover/popover.stories.mdx
@@ -9,6 +9,9 @@ import Popover from './index'
   component={Popover}
   args={{
     as: 'span',
+    buttonProps: {
+      children: 'Open popover'
+    }
   }}
 />
 
