--- a/libs/stack-ui/src/components/ShareButton/share-button.stories.mdx
+++ b/libs/stack-ui/src/components/ShareButton/share-button.stories.mdx
@@ -38,7 +38,7 @@ import ShareButton from './index'
   }}
 />
 
-export const Template = (args) => <ShareButton {...args} />
+export const Template = (args) => <div className={`flex flex-col m-auto h-screen justify-center items-center`}><ShareButton {...args} /></div>
 
 # ShareButton
 
@@ -50,21 +50,6 @@ export const Template = (args) => <ShareButton {...args} />
 
 ## Showcase
 
-## Row share button
-
-<Canvas>
-  <Story
-    name="Row Share Button"
-    args={{
-      tokens: {
-        listDirection: 'row',
-      },
-    }}
-  >
-    {Template.bind({})}
-  </Story>
-</Canvas>
-
 ## Column share button
 
 <Canvas>
@@ -73,6 +58,22 @@ export const Template = (args) => <ShareButton {...args} />
     args={{
       tokens: {
         listDirection: 'column',
+      },
+      offset: 20,
+    }}
+  >
+    {Template.bind({})}
+  </Story>
+</Canvas>
+
+## Row share button
+
+<Canvas>
+  <Story
+    name="Row Share Button"
+    args={{
+      tokens: {
+        listDirection: 'row',
       },
     }}
   >
