fix: new icons in share button story + icons change color

--- a/libs/stack-ui/src/components/ShareButton/share-button.stories.mdx
+++ b/libs/stack-ui/src/components/ShareButton/share-button.stories.mdx
@@ -12,7 +12,7 @@ import ShareButton from './index'
     sharingLinksList: [
       {
         ariaLabel: 'Share on Facebook',
-        icon: 'Facebook',
+        icon: 'FacebookRounded',
         key: 'facebook',
       },
       {
@@ -29,6 +29,16 @@ import ShareButton from './index'
         ariaLabel: 'Share on YouTube',
         icon: 'YouTube',
         key: 'youtube',
+      },
+      {
+        ariaLabel: 'Share on X',
+        icon: 'X',
+        key: 'x',
+      },
+      {
+        ariaLabel: 'Share on LinkedIn',
+        icon: 'LinkedIn',
+        key: 'linkedin',
       },
     ],
   }}
