fix: reactnode example

--- a/libs/stack-ui/src/components/ShareButton/share-button.stories.mdx
+++ b/libs/stack-ui/src/components/ShareButton/share-button.stories.mdx
@@ -1,6 +1,7 @@
 import { Canvas, Meta, Story } from '@storybook/addon-docs'
 import { ArgTypes } from '@storybook/blocks'
 import ShareButton from './index'
+import LinkedIn from '../icons/LinkedIn'
 
 <Meta
   title="Base Components/Share Button"
@@ -37,7 +38,7 @@ import ShareButton from './index'
       },
       {
         ariaLabel: 'Share on LinkedIn',
-        icon: 'LinkedIn',
+        icon: <LinkedIn />,
         key: 'linkedin',
       },
     ],
