Stack 45 component checkbox accessibility and icon (#40)
fix: checkbox can take icon prop + accessibility

--- a/libs/stack-ui/src/components/fields/Checkbox/Checkbox.stories.mdx
+++ b/libs/stack-ui/src/components/fields/Checkbox/Checkbox.stories.mdx
@@ -1,15 +1,15 @@
 {/* Checkbox.stories.mdx */}
 import { Canvas, Meta, Story } from '@storybook/addon-docs'
 import Checkbox from './index'
+import Check from '../../icons/Check'
 
 <Meta
   title="Form/Fields/Checkbox"
   component={Checkbox}
   args={{
-    id: 'checkbox',
     label: 'This is a checkbox label',
     name: 'checkbox',
-    ariaLabel: 'checkbox',
+    ariaLabel: 'checkbox-label',
   }}
 />
 
@@ -20,13 +20,33 @@ export const Template = (args) => <Checkbox {...args} />
 Checkbox component.
 
 <Canvas>
-  <Story name="Default">{Template.bind({})}</Story>
+  <Story
+    name="Default"
+    args={{
+      id: 'checkbox-1'
+    }}
+  >
+    {Template.bind({})}
+  </Story>
+</Canvas>
+
+<Canvas>
+  <Story 
+    name="With icon"
+    args={{
+      id: 'checkbox-2',
+      icon: <Check />
+    }}
+  >
+    {Template.bind({})}
+  </Story>
 </Canvas>
 
 <Canvas>
   <Story
     name="Disabled"
     args={{
+      id: 'checkbox-3',
       isDisabled: true,
     }}
   >
@@ -38,6 +58,7 @@ Checkbox component.
   <Story
     name="Error"
     args={{
+      id: 'checkbox-4',
       isError: true,
       errorMessage: 'This is an error message',
     }}
