--- a/libs/stack-ui/src/components/fields/Checkbox/Checkbox.stories.mdx
+++ b/libs/stack-ui/src/components/fields/Checkbox/Checkbox.stories.mdx
@@ -19,6 +19,7 @@ export const Template = (args) => <Checkbox {...args} />
 
 Checkbox component.
 
+## Default
 <Canvas>
   <Story
     name="Default"
@@ -30,6 +31,22 @@ Checkbox component.
   </Story>
 </Canvas>
 
+## Color variant
+<Canvas>
+  <Story
+    name="Gray"
+    args={{
+      id: 'checkbox-8',
+      tokens: {
+        color: 'gray'
+      }
+    }}
+  >
+    {Template.bind({})}
+  </Story>
+</Canvas>
+
+## With icon
 <Canvas>
   <Story 
     name="With icon"
@@ -42,6 +59,7 @@ Checkbox component.
   </Story>
 </Canvas>
 
+## Disabled
 <Canvas>
   <Story
     name="Disabled"
@@ -54,6 +72,7 @@ Checkbox component.
   </Story>
 </Canvas>
 
+## Error
 <Canvas>
   <Story
     name="Error"
