--- a/libs/stack-ui/src/components/fields/RadioGroup/RadioGroup.stories.mdx
+++ b/libs/stack-ui/src/components/fields/RadioGroup/RadioGroup.stories.mdx
@@ -7,7 +7,7 @@ import { RadioGroupProvider } from '../../../providers/RadioGroup/RadioGroup'
 
 export const Template = (args) => (
   <RadioGroupProvider>
-    <RadioGroup {...args}>
+    <RadioGroup label="Question 1/12" {...args}>
       <Radio id="item1" label="Item 1" name="Item 1" value="1" />
       <Radio id="item2" label="Item 2" name="Item 2" value="2" />
       <Radio id="item3" label="Item 3" name="Item 3" value="3" />
@@ -21,4 +21,30 @@ RadioGroup component.
 
 <Canvas>
   <Story name="Default">{Template.bind({})}</Story>
+</Canvas>
+
+<Canvas>
+  <Story
+    name="Disabled"
+    args={{
+      isDisabled: true,
+    }}
+
+>
+
+    {Template.bind({})}
+
+  </Story>
+</Canvas>
+
+<Canvas>
+  <Story
+    name="Error"
+    args={{
+      isError: true,
+      errorMessage: 'This is an error message',
+    }}
+  >
+    {Template.bind({})}
+  </Story>
 </Canvas>
