--- a/libs/stack-ui/src/components/fields/RadioGroup/RadioGroup.stories.mdx
+++ b/libs/stack-ui/src/components/fields/RadioGroup/RadioGroup.stories.mdx
@@ -4,13 +4,25 @@ import Radio from '../Radio/index'
 
 <Meta title="Form/Fields/RadioGroup" component={RadioGroup} />
 
-export const Template = (args) => (
-  <RadioGroup label="Question 1/12" {...args}>
-    <Radio id="item1" label="Item 1" name="Item 1" value="1" />
-    <Radio id="item2" label="Item 2" name="Item 2" value="2" />
-    <Radio id="item3" label="Item 3" name="Item 3" value="3" />
-  </RadioGroup>
-)
+export const Template = (args) => {
+  return (
+    <RadioGroup label="Question 1/12" {...args}>
+      <Radio id="item1" label="Item 1" name="item" value="1" />
+      <Radio id="item2" label="Item 2" name="item" value="2" />
+      <Radio id="item3" label="Item 3" name="item" value="3" />
+    </RadioGroup>
+  )
+}
+
+export const TemplateError = (args) => {
+  return (
+    <RadioGroup label="Question 2/12" {...args}>
+      <Radio id="item4" label="Item 1" name="item" value="1" />
+      <Radio id="item5" label="Item 2" name="item" value="2" />
+      <Radio id="item6" label="Item 3" name="item" value="3" />
+    </RadioGroup>
+  )
+}
 
 # RadioGroup
 
@@ -42,6 +54,6 @@ RadioGroup component.
       errorMessage: 'This is an error message',
     }}
   >
-    {Template.bind({})}
+    {TemplateError.bind({})}
   </Story>
 </Canvas>
