--- a/libs/stack-ui/src/components/fields/Checkbox/Checkbox.stories.mdx
+++ b/libs/stack-ui/src/components/fields/Checkbox/Checkbox.stories.mdx
@@ -22,7 +22,7 @@ export const TemplateWithButton = (args) => {
   const [checked, setChecked] = useState(args?.defaultSelected ?? false)
   return (
     <div className={`flex gap-4 items-center`}>
-      <Checkbox isSelected={checked} />
+      <Checkbox isSelected={checked} onChange={() => setChecked(!checked)} />
       <Button handlePress={() => setChecked(!checked)}>Click to check</Button>
     </div>
   )
