--- a/libs/stack-ui/src/components/fields/Checkbox/Checkbox.stories.mdx
+++ b/libs/stack-ui/src/components/fields/Checkbox/Checkbox.stories.mdx
@@ -20,9 +20,17 @@ export const Template = (args) => <Checkbox {...args} />
 
 export const TemplateWithButton = (args) => {
   const [checked, setChecked] = useState(args?.defaultSelected ?? false)
+  const { onChange, ...restOfArgs } = args
   return (
     <div className={`flex gap-4 items-center`}>
-      <Checkbox isSelected={checked} onChange={() => setChecked(!checked)} />
+      <Checkbox 
+        isSelected={checked} 
+        onChange={(isSelected) => {
+          setChecked(!checked)
+          onChange(isSelected)
+        }}
+        {...restOfArgs}
+      />
       <Button handlePress={() => setChecked(!checked)}>Click to check</Button>
     </div>
   )
