--- a/libs/stack-ui/src/components/fields/Checkbox/Checkbox.stories.mdx
+++ b/libs/stack-ui/src/components/fields/Checkbox/Checkbox.stories.mdx
@@ -2,6 +2,8 @@
 import { Canvas, Meta, Story } from '@storybook/addon-docs'
 import Checkbox from './index'
 import Check from '../../icons/Check'
+import Button from '../../Button'
+import { useState } from 'react'
 
 <Meta
   title="Form/Fields/Checkbox"
@@ -15,6 +17,24 @@ import Check from '../../icons/Check'
 />
 
 export const Template = (args) => <Checkbox {...args} />
+
+export const TemplateWithButton = (args) => {
+  const [checked, setChecked] = useState(args?.defaultSelected ?? false)
+  const { onChange, ...restOfArgs } = args
+  return (
+    <div className={`flex gap-4 items-center`}>
+      <Checkbox 
+        isSelected={checked} 
+        onChange={(isSelected) => {
+          setChecked(!checked)
+          onChange(isSelected)
+        }}
+        {...restOfArgs}
+      />
+      <Button handlePress={() => setChecked(!checked)}>Click to check</Button>
+    </div>
+  )
+}
 
 # Checkbox
 
@@ -85,5 +105,17 @@ Checkbox component.
     }}
   >
     {Template.bind({})}
+  </Story>
+</Canvas>
+
+## Check from other component
+<Canvas>
+  <Story
+    name="Check from other component"
+    args={{
+      id: 'checkbox-5',
+    }}
+  >
+    {TemplateWithButton.bind({})}
   </Story>
 </Canvas>
