--- a/libs/stack-ui/src/components/Popover/popover.stories.mdx
+++ b/libs/stack-ui/src/components/Popover/popover.stories.mdx
@@ -29,12 +29,28 @@ export const Template = (args) => (
 
 # Popover
 
+## Default
 <Canvas>
   <Story
     name="Default"
     args={{
       variant: 'p',
       offset: 20,
+    }}
+  >
+    {Template.bind({})}
+  </Story>
+</Canvas>
+
+## Closes when interacting outside
+<Canvas>
+  <Story
+    name="Closes when inteacting outside"
+    args={{
+      variant: 'p',
+      offset: 20,
+      isDismissable: true,
+      shouldCloseOnBlur: true,
     }}
   >
     {Template.bind({})}
