--- a/libs/stack-ui/src/components/Menu/Menu.stories.mdx
+++ b/libs/stack-ui/src/components/Menu/Menu.stories.mdx
@@ -1,4 +1,4 @@
-<!-- SidePanel.stories.mdx -->
+{/* menu */}
 
 import { Canvas, Meta, Story } from '@storybook/addon-docs'
 import MenuContent from '../../storybook/Menu/Menu'
