fix: checkbox group item

--- a/libs/stack-ui/src/components/fields/CheckboxGroup/checkbox-group.stories.mdx
+++ b/libs/stack-ui/src/components/fields/CheckboxGroup/checkbox-group.stories.mdx
@@ -1,15 +1,15 @@
 import { Canvas, Meta, Story } from '@storybook/addon-docs'
 import CheckboxGroup from './index'
-import Checkbox from '../Checkbox/index'
+import CheckboxGroupItem from './components/CheckboxGroupItem'
 
 <Meta title="Form/Fields/CheckboxGroup" component={CheckboxGroup} />
 
 export const Template = (args) => {
   return (
     <CheckboxGroup label="Question 1/12" {...args}>
-      <Checkbox id="item1" label="Item 1" name="item" value="1" />
-      <Checkbox id="item2" label="Item 2" name="item" value="2" />
-      <Checkbox id="item3" label="Item 3" name="item" value="3" />
+      <CheckboxGroupItem id="item1" label="Item 1" name="item" value="1" ariaLabel="Item 1" />
+      <CheckboxGroupItem id="item2" label="Item 2" name="item" value="2" ariaLabel="Item 2" />
+      <CheckboxGroupItem id="item3" label="Item 3" name="item" value="3" ariaLabel="Item 3" />
     </CheckboxGroup>
   )
 }
@@ -17,9 +17,9 @@ export const Template = (args) => {
 export const TemplateError = (args) => {
   return (
     <CheckboxGroup label="Question 2/12" {...args}>
-      <Checkbox id="item4" label="Item 1" name="item" value="1" />
-      <Checkbox id="item5" label="Item 2" name="item" value="2" />
-      <Checkbox id="item6" label="Item 3" name="item" value="3" />
+      <CheckboxGroupItem id="item4" label="Item 1" name="item" value="1" ariaLabel="Item 1" />
+      <CheckboxGroupItem id="item5" label="Item 2" name="item" value="2" ariaLabel="Item 2" />
+      <CheckboxGroupItem id="item6" label="Item 3" name="item" value="3" ariaLabel="Item 3" />
     </CheckboxGroup>
   )
 }
