--- a/libs/stack/stack-ui/src/components/Accordion/accordion.stories.mdx
+++ b/libs/stack/stack-ui/src/components/Accordion/accordion.stories.mdx
@@ -1,6 +1,7 @@
 import { Canvas, Meta, Story } from '@storybook/addon-docs'
 import { ArgTypes } from '@storybook/blocks'
 import Accordion from './'
+import CloseBtn from '../icons/CloseBtn'
 
 <Meta
   title="Base Components/Accordion"
@@ -102,6 +103,7 @@ export const Template = (args) => (
         textAlign: 'left',
       },
       defaultIsOpen: true,
+      icon: <CloseBtn />,
     }}
   >
     {Template.bind({})}
