docs: icon arg type

--- a/libs/stack/stack-ui/src/components/Accordion/accordion.stories.mdx
+++ b/libs/stack/stack-ui/src/components/Accordion/accordion.stories.mdx
@@ -18,7 +18,7 @@ import CloseBtn from '../icons/CloseBtn'
       description: 'Used for accessibility',
     },
     icon: {
-      description: 'Takes in the name of an Icon inside the available icons folder',
+      description: 'Takes in the name of an Icon inside the available icons folder or a component icon',
       defaultValue: {
         summary: 'ArrowRight',
       },
