fix: with selection mode

--- a/libs/stack/stack-ui/src/components/Accordion/accordion.stories.mdx
+++ b/libs/stack/stack-ui/src/components/Accordion/accordion.stories.mdx
@@ -26,11 +26,17 @@ import AccordionItem from './components/AccordionItem'
     },
     children: {
       description: 'List of `AccordionItem`',
-    }
+    },
+    selectionMode: {
+      description: 'Describes the selection mode for all the children items',
+      options: ['multiple', 'single', 'none'],
+      control: { type: 'radio' },
+      defaultValue: 'single',
+    },
   }}
   args={{
     id: '1',
-    onClick: (isOpen) => console.log('On accordion click', `isOpen: ${isOpen}`)
+    onSelectionChange: (keys) => console.log('Selection changed to: ', keys)
   }}
   parameters={{ layout: 'fullscreen' }}
 />
