--- a/libs/stack/stack-ui/src/components/Accordion/accordion.stories.mdx
+++ b/libs/stack/stack-ui/src/components/Accordion/accordion.stories.mdx
@@ -57,8 +57,18 @@ export const TemplateWithFocusableChildren = (args) => (
       <Button>Focusable item 1</Button>
       <Button>Focusable item 2</Button>
     </AccordionItem>
-    <AccordionItem key="item-2" title="This is an accordion 2" defaultIsOpen>
+    <AccordionItem key="item-2" title="This is an accordion 2">
       <Button>Focusable item</Button>
+    </AccordionItem>
+  </Accordion>
+)
+
+export const TemplateDefaultOpenedItem = (args) => (
+  <Accordion {...args}>
+    <AccordionItem key="item-1" title="This is an accordion" defaultIsOpen>
+      BODY TEXT: Is not the best kind of originality that which comes after a sound apprenticeship? That which shall
+      prove to be the blending of a firm conception of, “useful precedent” and the progressive tendencies of an able
+      mind.
     </AccordionItem>
   </Accordion>
 )
@@ -117,11 +127,10 @@ export const TemplateWithFocusableChildren = (args) => (
       tokens: {
         textAlign: 'left',
       },
-      defaultIsOpen: true,
       icon: <CloseBtn />,
     }}
   >
-    {Template.bind({})}
+    {TemplateDefaultOpenedItem.bind({})}
   </Story>
 </Canvas>
 
