--- a/libs/stack/stack-ui/src/components/Form/form.stories.mdx
+++ b/libs/stack/stack-ui/src/components/Form/form.stories.mdx
@@ -2,16 +2,16 @@
 
 import { Canvas, Meta, Story } from '@storybook/addon-docs'
 import Form from './index'
-import { formConfig, fieldsTest, formSchemaTest } from './storybook/formConfig'
+import { formConfigTest, fieldsTest, formSchemaTest } from './storybook/formConfig'
  
 <Meta 
   title="Form/Form"
   component={Form}
   parameters={{
-    layout: 'fullscreen',
+    layout: 'centered',
   }} 
   args={{
-    config: formConfig,
+    config: formConfigTest,
     fields: fieldsTest,
     submit: {
       handleSubmit: (data) => console.log("submitted", data),
