Revert "fix: with selection mode"
This reverts commit 063ffb87c1f694c8609b6206bbf2064877cfba21.

--- a/libs/stack/stack-ui/src/components/Accordion/accordion.stories.mdx
+++ b/libs/stack/stack-ui/src/components/Accordion/accordion.stories.mdx
@@ -26,17 +26,11 @@ import AccordionItem from './components/AccordionItem'
     },
     children: {
       description: 'List of `AccordionItem`',
-    },
-    selectionMode: {
-      description: 'Describes the selection mode for all the children items',
-      options: ['multiple', 'single', 'none'],
-      control: { type: 'radio' },
-      defaultValue: 'single',
-    },
+    }
   }}
   args={{
     id: '1',
-    onSelectionChange: (keys) => console.log('Selection changed to: ', keys)
+    onClick: (isOpen) => console.log('On accordion click', `isOpen: ${isOpen}`)
   }}
   parameters={{ layout: 'fullscreen' }}
 />
