fix: lightbox component accessibility + modal integrates react aria

--- a/libs/stack/stack-ui/src/components/Lightbox/lightbox.stories.mdx
+++ b/libs/stack/stack-ui/src/components/Lightbox/lightbox.stories.mdx
@@ -1,26 +1,72 @@
-{/* lightbox.stories.mdx */}
-
 import { Canvas, Meta, Story } from '@storybook/addon-docs'
+import { ArgTypes } from '@storybook/blocks'
 import Lightbox from './'
+import LightboxControlledState from '../../storybook/Lightbox/LightboxControlledState'
 import Image from 'next/image'
+import image from '../../../static/images/image.png'
 
 <Meta
   title="BASE COMPONENTS/Lightbox"
   component={Lightbox}
+  argTypes={{
+    label: {
+      description: 'Used for accessibility and/or for displaying a label',
+      control: {
+        type: 'text'
+      },
+    },
+    thumbnailContent: {
+      description: `The lightbox's preview content`
+    },
+    onOpenChange: {
+      description: 'Callback for executing some code when the state of the lightbox changes. Passes a boolean `isOpen`'
+    },
+    closeButton: {
+      description: `To replace the lightbox's default close button`
+    },
+    isOpen: {
+      description: 'Handles an optional controlled state'
+    },
+    setOpen: {
+      description: `Allows the lightbox component's thumbnail to still controll the lightbox's state even in a case of controlled state`
+    }
+  }}
   args={{
     label: 'Open Dialog',
-    thumbnailContent: <Image src={''} width={570} height={378} />,
+    thumbnailContent: <Image src={image} width={570} height={762} alt="Dog picture" />,
+    onOpenChange: (isOpen) => console.log(`Lightbox is now ${isOpen}`),
   }}
 />
 
-export const Template = (args) => (
-  <Lightbox {...args}>
-    <Image src={''} width={640} height={805} alt="Lightbox preview" />
-  </Lightbox>
-)
+export const Template = (args) => {
+  return (
+    <Lightbox {...args}>
+      <Image src={image} width={570} height={762} alt="Lightbox preview" />
+    </Lightbox>
+  )
+}
+
+export const TemplateControlledState = (args) => {
+  return (
+    <LightboxControlledState {...args}>
+      <Image src={image} width={570} height={762} alt="Lightbox preview" />
+    </LightboxControlledState>
+  )
+}
 
 # Lightbox
 
+## Props
+<ArgTypes />
+
+## Showcase
+
+### Default
 <Canvas>
   <Story name="Default">{Template.bind({})}</Story>
+</Canvas>
+
+### With a controlled state
+<Canvas>
+  <Story name="ControlledState">{TemplateControlledState.bind({})}</Story>
 </Canvas>
